# stimmung

./: .gitignore  README.md  __init__.py  plan.txt  pyproject.toml  scratch.ipynb
bundestag/: __init__.py  config.py  dashboard.py
bundestag/src/: i18n.py  log_config.py
bundestag/src/data/: ensure_data.py  models.py
bundestag/src/prose/: dropdown_post.md  dropdown_pre.md  intro.md  pre_dissenter.md
bundestag/src/viz/: visualize.py
data/translations/: translations.json
i18n/: dictionary.json
src/: config.py
src/data/: models.py
