[tool.poetry]
name = "bundestag"
version = "0.1.0"
description = ""
authors = ["Andreas Domberg <andom@posteo.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">3.12, <3.13"
pandas = "2.2.2"
numpy = "1.26.1"
requests = "2.31.0"
pyarrow = "16.0.0"
plotly = "5.17.0"
dash-bootstrap-templates = "1.1.1"
nbformat = "5.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
